Fix dark mode styles; Fix logos; Fix homepage

--- a/_source/_assets/css/base/_elements.scss
+++ b/_source/_assets/css/base/_elements.scss
@@ -19,6 +19,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 1;
+  background-color: var(--color-background);
 
   @include media(large) {
     font-size: var(--font-base-medium);
