--- a/_source/_assets/css/components/_foot.scss
+++ b/_source/_assets/css/components/_foot.scss
@@ -51,3 +51,9 @@
   }
 
 }
+
+.logo-basecamp,
+.logo-hey {
+  height: 1.9em;
+  width: auto;
+}
